--- a/templates/layout.html
+++ b/templates/layout.html
@@ -25,8 +25,9 @@
     <footer>
       <div id="footer">
         <div id="footer-inner">
-        	© 2013 Levi Bracken &nbsp;&nbsp;|&nbsp;&nbsp; 
-          <a href="mailto:levi.bracken@gmail.com?subject=SkiData">Report missing or inaccurate data.</a>
+        	© 2013 <a href="http://levibracken.com">Levi Bracken</a> &nbsp;&nbsp;|&nbsp;&nbsp; 
+          <a href="mailto:levi.bracken@gmail.com?subject=SkiData">Report missing or inaccurate data.</a> &nbsp;&nbsp;|&nbsp;&nbsp;
+          <a href="https://github.com/lbracken/ski_data">Fork me on GitHub</a>
         </div>
       </div>
     </footer>
