Removing Google+ social buttons

--- a/templates/ski-area-map.html
+++ b/templates/ski-area-map.html
@@ -23,9 +23,7 @@
           </select>
         </div>
         
-        <div id="topToolbarSocial">
-          <div class="g-plusone" data-size="medium"></div>
-        </div>        
+        <div id="topToolbarSocial"></div>        
         <div class="clearPanel"></div>         
       </div>
  
@@ -104,14 +102,5 @@
 			$("#chart").html("<br/></br/><b>Sorry, your browser won't support this " +
 					"visualization. Please try again using a modern browser.</b>");			
 		}
-	</script>
-
-    <!-- Render Google+1 button -->
-    <script type="text/javascript">
-      (function() {
-        var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-        po.src = 'https://apis.google.com/js/plusone.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
-       })();
-    </script> 	
+	</script>	
 {% endblock %}
