--- a/templates/ski-area-size-visualization.html
+++ b/templates/ski-area-size-visualization.html
@@ -34,9 +34,7 @@
         <div id="topToolbarButtons">          
           <button id="addSkiAreaButton">Search</button>
         </div>
-        <div id="topToolbarSocial">
-          <div class="g-plusone" data-size="medium"></div>
-        </div>        
+        <div id="topToolbarSocial"></div>        
         <div class="clearPanel"></div>        
       </div>
  
@@ -113,13 +111,4 @@
     <script src="static/js/raphael-min.js"></script>
     <script src="static/js/ski-area-common.js"></script>
     <script src="static/js/ski-area-size-visualization.js"></script>
-    
-    <!-- Render Google+1 button -->
-    <script type="text/javascript">
-      (function() {
-        var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-        po.src = 'https://apis.google.com/js/plusone.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
-       })();
-    </script> 
 {% endblock %}
