--- a/templates/ski-area-map.html
+++ b/templates/ski-area-map.html
@@ -4,9 +4,7 @@
 {% block extra_style %}<link rel="stylesheet" href="static/css/ski-area-map.css">{% endblock %}
 
 {% block welcome %}
-<span class="welcomeText">The US has many alpine ski areas in a variety of sizes. The
-          interactive map below helps to visualize their location and a number of other facets. 
-          Click on any point to view detailed information about that individual ski area.</span>
+<span class="welcomeText">The interactive map below displays US ski areas by location and other characteristics. Select any dot to see detailed information.</span>
 {% endblock %}
 
 {% block body %}
