--- a/static/css/ski-area-map.css
+++ b/static/css/ski-area-map.css
@@ -1,6 +1,9 @@
 svg {
  /* "#76A0C9", "#DBE7F0", "#A0BDD6", "#A5A4A6",  "#C7D2D9" //   ["#7595BF", "#7A9FBF", "#A3BFD9"];*/
-  
+}
+
+select {
+  margin-left: 5px;
 }
 
 #states path {
