--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,22 +3,19 @@
 }
 
 html, body {
-  margin: 0px;
   padding: 0px;
   height: 100%;
   background-color: #f5f5fb;
-}
-
-html {
-  font-family: Tahoma, Trebuchet MS, Helvetica, Arial;
-  font-size: .8em;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 0.95em;
+  font-weight: 400;
 }
 
 body {}
 
 h1 {
-  font-size: 2.2em;
-  padding-bottom: .25em;
+  margin: 0.5em 0em 0.25em 0em;
+  font-size: 2.5em;
 }
 
 A:link    {color: #000; text-decoration: none;}
@@ -40,41 +37,27 @@ img {border: none;}
   margin: 0 auto -41px auto; /* the bottom margin is the negative value of the footer's height + border */
 }
 
-#header{
-  padding-top: 1em;
-}
+#header{}
 
 .welcomeText {
-  font-size: 1.25em;
+  margin: 0.5em 0em 0.5em 0em;
+  color: #727272;
 }
 
-.welcomeText p {
-  margin-top: 1em;	
-}
-
-#welcomeText-showMoreDetails {
-  font-size: 1.05em;
-  margin-left: 10px;
-  color: #666;
-  cursor: pointer;
+.description {
+  color: #727272;
 }
 
 #topToolbar {  
-  padding: 5px;
+  padding: 0.5em 1em 0.5em 1em;
   margin: 20px 0px 20px 10px;
-  border: 2px solid #D1D1C8;
-  background-color: #EBEBD7;
-  border-radius: 3px;
-  box-shadow: 4px 4px 4px #EBEBD7;
+  background-color: #FFF3E0;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 
 #topToolbarButtons {
   float: left;
   margin-left: 5px;
-}
-
-#topToolbarSocial {
-  float: right;
 }
 
 #contentLoading {
@@ -94,8 +77,7 @@ img {border: none;}
 }
 
 #infoDockSection hr {
-  color: #333;
-  background-color: #333;
+  border: 1px solid #FF9800;
 }
 
 #infoDockSection td {
@@ -113,9 +95,8 @@ img {border: none;}
 }
 
 #infoDockSection .tableLeft .colLbl {
-  color: #666;	
-  text-align: right; 
-  font-style: italic;  
+  color: #727272;
+  text-align: right;
 }
 
 #infoDockSection .tableLeft .colValue {
@@ -148,7 +129,7 @@ img {border: none;}
 #footer {
   border-top: 1px dotted #666;
   width: 100%;
-  color: #666;
+  color: #727272;
 }
 
 #footer-inner {
@@ -164,8 +145,7 @@ img {border: none;}
 #footer A:focus   {-moz-outline-style: none;}
 
 .previewImg {
-  box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.80);
-  -moz-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.80);
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   margin: 0px 20px 25px 0px;
 }
 
