--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,7 +3,8 @@
   <head>
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>{% block title %}{% endblock %}</title>    
+    <title>{% block title %}{% endblock %}</title>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:600,400' rel='stylesheet' type='text/css'>    
     <link rel="stylesheet" href="static/css/style.css">
     {% block extra_style %}{% endblock %}
   </head>
